tried to migrate a lot to Java 17, but this might not be needed (yet)